Fix missing icons by hardcoding the icon reference, since the @import machinery breaks the FL_THEME_URL replacements.

--- a/wp-content/themes/beaverwarrior/stylesheets/main.less
+++ b/wp-content/themes/beaverwarrior/stylesheets/main.less
@@ -1,4 +1,16 @@
 @import "../build/interim/icon_manifest.less";
+
+@font-face {
+    font-family: 'icon';
+    src: url('{FL_CHILD_THEME_URL}/build/fonts/icon.eot');
+    src: url('{FL_CHILD_THEME_URL}/build/fonts/icon.eot?#iefix') format('eot'),
+         url('{FL_CHILD_THEME_URL}/build/fonts/icon.woff') format('woff'),
+         url('{FL_CHILD_THEME_URL}/build/fonts/icon.ttf') format('truetype'),
+         url('{FL_CHILD_THEME_URL}/build/fonts/icon.svg?#icon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 @import "../assets/Base.less";
 
 @import "../components/AffixColumn/AffixColumn.less";
